# aegis

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  build_and_run_test.sh  create.sh  dump_swu_layout.sh  extract.sh  gen_test_keys.sh  gen_update.sh  sw-description.default
cmake/: config.h.in
dbus/: de.skytrack.Aegis.conf  de.skytrack.Aegis1.xml
docs/: build.md  bundle.md  cli.md  crash_dump.md  daemon.md  installation.md  native.md  ota-flow.md  overview.md  partition-layout.md  target.md
examples/: aegis.conf
include/aegis/: aegis_dbus_client.h  aegis_service.h  app_context.h  archive_update_handler.h  archive_update_handler.hpp  boot_control.hpp  bootchooser.h  bundle.h  bundle_creator.hpp  bundle_manifest.hpp  bundle_verifier.hpp  checksum.h  cli_parser.h  client.hpp  command_registry.h  command_runner.hpp  commands.h  config.hpp  config_file.h  context.h  cpio.hpp  crypt.h  crypto.hpp  dbus_message_builder.h  dbus_service.hpp  dm.h  error.h  ext4_installer.hpp  filesystem_image_update_handler.h  gcs_client.hpp  gcs_stub.hpp  install.h  installer.hpp  installer_dbus_client.h  installer_service.h  io.hpp  logging.hpp  manifest.h  manifest.hpp  mark.h  (+23 more)
include/aegis/agent/: session.h  session_store.h  state_machine.h
include/aegis/app/: app.hpp  cli.hpp
include/aegis/bootloader/: boot_control.hpp  boot_control_factory.hpp  nvboot_control.hpp  uboot_control.hpp
include/aegis/bundle/: bundle_creator.hpp  bundle_extractor.hpp  bundle_verifier.hpp
include/aegis/cli/: app_context.h  application.h  cli_options.h  cli_parser.h  command_registry.h  commands.h
include/aegis/common/: cpio.hpp  crash_handler.hpp  crypto.hpp  error.hpp  io.hpp  logger.hpp  logging.hpp  sha256.hpp  signal_set.hpp  state_store.hpp  util.hpp
include/aegis/config/: config.hpp
include/aegis/core/: application.hpp  gcs_client.hpp  ota_context.hpp  ota_event.hpp  ota_service.hpp  ota_state_machine.hpp  progress.hpp  types.hpp
include/aegis/crypto/: payload.hpp
include/aegis/dbus/: client.h  interface.h  message_builder.h  service.h  service_state.h
include/aegis/io/: cpio.hpp  (+1 more)
include/rauc/: bootchooser.h  bundle.h  checksum.h  config_file.h  context.h  crypt.h  dm.h  error.h  install.h  manifest.h  mark.h  mount.h  network.h  service.h  signature.h  slot.h  status_file.h  update_handler.h  utils.h  verity_hash.h
src/: aegis_dbus_client.cpp  aegis_service.cpp  app.cpp  app_context.cpp  application.cpp  archive_handler.cpp  archive_update_handler.cpp  boot_control.cpp  bootchooser.cpp  bundle.cpp  bundle_creator.cpp  bundle_extractor.cpp  bundle_manifest.cpp  bundle_verifier.cpp  checksum.cpp  cli.cpp  cli_parser.cpp  client.cpp  command_registry.cpp  command_runner.cpp  commands.cpp  config.cpp  config_file.cpp  context.cpp  cpio.cpp  crypt.cpp  crypto.cpp  dbus_message_builder.cpp  dbus_service.cpp  dm.cpp  ext4_installer.cpp  filesystem_image_update_handler.cpp  gcs_stub.cpp  install.cpp  installer.cpp  installer_dbus_client.cpp  installer_service.cpp  io.cpp  main.cpp  manifest.cpp  (+20 more)
src/agent/: session_store.cpp  state_machine.cpp
src/app/: app.cpp  cli.cpp
src/bootloader/: nvboot_control.cpp  uboot_control.cpp
src/bundle/: bundle_creator.cpp  bundle_extractor.cpp  bundle_manifest.cpp  bundle_verifier.cpp
src/cli/: app_context.cpp  application.cpp  commands.cpp  parser.cpp  registry.cpp
src/common/: command_runner.cpp  config.cpp  cpio.cpp  crash_handler.cpp  crypto.cpp  io.cpp  logging.cpp  signal_set.cpp  state_store.cpp  util.cpp
src/config/: config.cpp  state_store.cpp
src/core/: application.cpp  cli.cpp  dbus_service.cpp  ota_context.cpp  ota_service.cpp  ota_state_machine.cpp  progress.cpp  types.cpp
src/crypto/: crypto.cpp
src/dbus/: client.cpp  message_builder.cpp  service.cpp  service_state.cpp
src/handlers/: archive_handler.cpp  block_handler.cpp  fs_image_handler.cpp  raw_handler.cpp  update_handler.cpp
src/install/: hook_runner.cpp  workflow.cpp
src/installer/: archive_handler.cpp  archive_support.cpp  archive_update_handler.cpp  file_handler.cpp  handler_utils.cpp  install_signal_scope.cpp  installer.cpp  manifest.cpp  packer.cpp  raw_handler.cpp  raw_update_handler.cpp
src/io/: command_runner.cpp  cpio.cpp  io.cpp
src/service/: dbus_service.cpp  gcs_stub.cpp
src/shared/: CMakeLists.txt
src/shared/inc/: CameraApi.h  CameraCredentialConfig.h  CameraInfo.h  CryptoHelper.h  DesiredConfig.h  DeviceParser.h  DeviceTranslator.h  DiscoveryResult.h  DiscoveryStatusEvent.h  EdgeApplianceEventRecord.h  EventInterface.h  FaultEvent.h  FaultMessages.h  FunctionScheduler.h  GetHealthRequest.h  HttpClient.h  HttpStatusCode.h  IPCClient.h  IPCServer.h  IPCServerBase.h  IoTHubBase.h  IoTHubDeviceClient.h  IoTHubDirectMethod.h  IoTHubInterface.h  IoTHubManager.h  IoTHubModuleClient.h  IoTHubProvisionHelper.h  IoTHubSender.h  IoTHubTwin.h  MediaDeviceEvent.h  ModuleConfig.h  RequestHandler.h  RequestRouter.h  RestApiService.h  ServiceBase.h  common.h  env.h  system_cmd.h  utils.h  uuid.h
src/shared/src/: CameraApi.cpp  CameraCredentialConfig.cpp  CameraInfo.cpp  CryptoHelper.cpp  DesiredConfig.cpp  DeviceParser.cpp  EdgeApplianceEventRecord.cpp  FunctionScheduler.cpp  HttpClient.cpp  IPCClient.cpp  IPCServer.cpp  IoTHubBase.cpp  IoTHubDeviceClient.cpp  IoTHubDirectMethod.cpp  IoTHubManager.cpp  IoTHubModuleClient.cpp  IoTHubProvisionHelper.cpp  IoTHubSender.cpp  IoTHubTwin.cpp  MediaDeviceEvent.cpp  ModuleConfig.cpp  RestApiService.cpp  system_cmd.cpp  utils.cpp
src/states/: commit_state.cpp  download_state.cpp  extract_state.cpp  failure_state.cpp  idle_state.cpp  install_state.cpp  reboot_state.cpp  sync_state.cpp  verify_bundle_state.cpp
src/stub/: gcs_stub.cpp
systemd/: aegis.service
tests/: CMakeLists.txt  fakes.hpp  ota_context_test.cpp  ota_state_machine_test.cpp  test_command_runner.cpp  test_config.cpp  test_cpio.cpp  test_crypto.cpp  test_error.cpp  test_install_cancel.cpp  test_logging.cpp  test_manifest.cpp  test_ota_state_machine.cpp  test_packer.cpp  test_sha256.cpp  test_state_store.cpp  test_types.cpp  test_util.cpp
(+42 files in other folders)
